--- a/technomedia/index.html
+++ b/technomedia/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>BD</title>
+    <title>TecnomediaBD</title>
     <link rel="icon" href="img/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.css">
